versión con ajustes

--- a/contents-2-1-1.html
+++ b/contents-2-1-1.html
@@ -20,7 +20,7 @@
             <div class="titles">
                 <h3>CURSO: ESTADÍSTICAS VITALES</h3>
                 <hr>
-                <h5>Módulo 3</h5>
+                <h5>Módulo 3 - Unidad 1</h5>
                 <h1>Módulo Certificación Médica de Defunciones</h1>
             </div>
             <a href="index.html" class="icon-home"><i class="material-icons">home</i></a>
@@ -31,7 +31,8 @@
             <div id="modal2-1-1" class="mdl-2-1-1">
                 <div id="bgPage"></div>
                 <div class="modal-content">
-                    <a href="contents.html" data-target="#modal2-1" class="modal-trigger modal-close ico-close" id="volver" onclick="abrirModal()">
+                    <a href="contents.html" data-target="#modal2-1" class="modal-trigger modal-close ico-close"
+                        id="volver" onclick="abrirModal()">
                         <img src="img/close.png" alt="icon-close">
                     </a>
                     <h3 class="etiquetaLarga">Características de la defunción</h3>
@@ -310,13 +311,13 @@
                     </a>
                     <h3 class="etiquetaXL">Médico certificador según la atención de la defunción</h3>
                     <div class="modal2-1-1-6_P0" onclick="btnModal2_1_1_6_1()">
-                        <img id="imgModal2-1-1-6-1" src="img/img1-modal-2-1-1-6.png" alt="" class="animated">
+                        <img id="imgModal2-1-1-6-1" src="img/img1-modal-2-1-1-6.png" alt="" class="pulse animated">
                         <p>
                             Médico Tratante
                         </p>
                     </div>
                     <div class="modal2-1-1-6_P1" onclick="btnModal2_1_1_6_2()">
-                        <img id="imgModal2-1-1-6-2" src="img/img2-modal-2-1-1-6.png" alt="" class="pulse animated">
+                        <img id="imgModal2-1-1-6-2" src="img/img2-modal-2-1-1-6.png" alt="" class="animated">
                         <p>
                             Médico No Tratante
                         </p>
@@ -329,18 +330,21 @@
                     </div>
                     <div class="textos_mdl2-1-1-6">
                         <p id="modal2-1-1-6_P0">
+                            <img id="imgModal2-1-1-6-1" src="img/img1-modal-2-1-1-6.png" alt="" class="">
                             <strong>Médico Tratante:</strong> Médico que atendió al paciente en vida, como médico
                             familiar, o aquel que asistió al paciente antes de morir. Se supone que durante este breve
                             lapso, el médico pudo haber realizado un examen físico o haber iniciado algún tratamiento.
                             (DANE, 2013)
                         </p>
                         <p id="modal2-1-1-6_P1">
+                            <img id="imgModal2-1-1-6-2" src="img/img2-modal-2-1-1-6.png" alt="" class="">
                             <strong>Médico No Tratante:</strong> Médico que no conoció al paciente en vida, pero por
                             responsabilidad institucional y social accede al conocimiento indirecto; debe apoyarse en
                             los datos de historia clínica o en la información de exámenes complementarios o
                             interrogatorio a familiares o testigos (DANE, 2013).
                         </p>
                         <p id="modal2-1-1-6_P2">
+                            <img id="imgModal2-1-1-6-3" src="img/img3-modal-2-1-1-6.png" alt="" class="">
                             <strong>Médico Legista:</strong> Profesional que a través de una necropsia médico legal
                             establece las causas de defunción. Este mecanismo es usado particularmente para los
                             fallecimientos donde existe duda de que se trate de una muerte natural o externa, o muertes
