--- a/final.html
+++ b/final.html
@@ -18,7 +18,7 @@
             <div class="titles">
                 <h3>CURSO: ESTADÍSTICAS VITALES</h3>
                 <hr>
-                <h5>Módulo 3</h5>
+                <h5>Módulo 3 - Unidad 1</h5>
                 <h1>Módulo Certificación Médica de Defunciones</h1>
             </div>
             <a href="index.html" class="icon-home"><i class="material-icons">home</i></a>
@@ -31,10 +31,14 @@
                     <div class="title">
                         <h3>Despedida</h3>
                     </div>
-                    <p> Esperamos haber contribuido al proceso de aprendizaje en la introducción al certificado de
-                        nacido vivo. </p>
-                    <p>Para profundizar más en este proceso, explore el documento PDF dispuesto en el aula, con el
-                        objetivo de indagar sobre otras recomendaciones para el proceso de certificación de nacido vivo.
+                    <p>
+                        Si tiene dudas técnicas con respecto al funcionamiento de la plataforma escriba al correo: <a href="mailto:soportend@minsalud.gov.co.">soportend@minsalud.gov.co.</a> 
+                    </p>
+                    <p>
+                        En el video que se encuentra dispuesto en este módulo, se efectúa  la certificación correspondiente a un caso de una defunción no fetal que se presenta en una institución de salud.
+                    </p>
+                    <p>
+                        Para efectuar una práctica en tiempo real, es necesario contar con un número de certificado y un usuario para ingresar a la plataforma de capacitación, puede solicitarlo al correo <a href="mailto:estadisticasvitales@minsalud.gov.co">estadisticasvitales@minsalud.gov.co</a> donde además puede realizar consultas para aclarar dudas con respecto al proceso de certificación médica de una defunción.
                     </p>
                 </div>
                 <a href="#!" target="_blank" rel="noopener noreferrer" class="btn-audio pulse animated">
