--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="titles">
                 <h3>CURSO: ESTADÍSTICAS VITALES</h3>
                 <hr>
-                <h5>Módulo 3</h5>
+                <h5>Módulo 3 - Unidad 1</h5>
                 <h1>Módulo Certificación Médica de Defunciones</h1>
             </div>
         </header>
