--- a/contents.html
+++ b/contents.html
@@ -216,8 +216,8 @@
                             </p>
                         </div>
                         <button data-target="modal2-1-1"
-                            class="modal-trigger modal-close btn-custom-modal pulse animated btn-modal-2-1">
-                            Tipos
+                            class="modal-trigger modal-close btn-custom-modal btn-modal-2-1">
+                            <span class="pulse animated infinite">Tipos</span>
                         </button>
                     </div>
                 </div>
@@ -866,33 +866,37 @@
                         <h3 class="etiquetaLarga">Diligenciamiento de las variables </h3>
                         <div id="tabs-modal3-2" class="menuTabs2">
                             <ul class="tabs">
-                                <li class="tab" onclick="changeIcon('#liModal3-1')">
+                                <li class="tab">
                                     <a class="active" href="#tabModal3-1">
-                                        <img id="#liModal3-1" src="img/tab-active.png" alt="">
+                                        <!--<img id="#liModal3-1" src="img/tab-active.png" alt="">-->
+                                        <span>1</span>
                                         <p>
                                             Recomendaciones <br> para certificación <br> de muertes fetales
                                         </p>
                                     </a>
                                 </li>
-                                <li class="tab" onclick="changeIcon('#liModal3-2')">
+                                <li class="tab">
                                     <a href="#tabModal3-2">
-                                        <img id="#liModal3-2" src="img/tab-inactive.png" alt="">
+                                        <!--<img id="#liModal3-2" src="img/tab-inactive.png" alt="">-->
+                                        <span>2</span>
                                         <p>
                                             Recomendaciones <br> para certificación <br> de muertes no fetales
                                         </p>
                                     </a>
                                 </li>
-                                <li class="tab" onclick="changeIcon('#liModal3-3')">
+                                <li class="tab">
                                     <a href="#tabModal3-3">
-                                        <img id="#liModal3-3" src="img/tab-inactive.png" alt="">
+                                        <!--<img id="#liModal3-3" src="img/tab-inactive.png" alt="">-->
+                                        <span>3</span>
                                         <p>
                                             Recomendaciones <br> para muertes en <br>mujeres en edad fértil
                                         </p>
                                     </a>
                                 </li>
-                                <li class="tab" onclick="changeIcon('#liModal3-4')">
+                                <li class="tab">
                                     <a href="#tabModal3-4">
-                                        <img id="#liModal3-4" src="img/tab-inactive.png" alt="">
+                                        <!--<img id="#liModal3-4" src="img/tab-inactive.png" alt="">-->
+                                        <span>4</span>
                                         <p>
                                             Recomendaciones <br> para muertes de <br> causa violenta
                                         </p>
@@ -966,6 +970,7 @@
                                     </ul>
                                     <img id="modal3-2-1-next" src="img/next.png" alt="next"
                                         class="modal3-2-next shake delay-1s slow animated" onclick="modal3_2_1_next()">
+                                    <span class="hide animated" onclick="changeTab2()">2</span>
                                 </div>
                             </div>
                             <div id="tabModal3-2" class="tab-content">
@@ -1005,6 +1010,7 @@
                                     </ul>
                                     <img id="modal3-2-2-next" src="img/next.png" alt="next"
                                         class="modal3-2-next shake delay-1s slow animated" onclick="modal3_2_2_next()">
+                                    <span class="hide animated"  onclick="changeTab3()">3</span>
                                 </div>
                             </div>
                             <div id="tabModal3-3" class="tab-content">
@@ -1044,6 +1050,7 @@
                                     </ul>
                                     <img id="modal3-2-3-next" src="img/next.png" alt="next"
                                         class="modal3-2-next shake delay-1s slow animated" onclick="modal3_2_3_next()">
+                                    <span class="hide animated"  onclick="changeTab4()">4</span>
                                 </div>
                             </div>
                             <div id="tabModal3-4" class="tab-content">
