--- a/contents.html
+++ b/contents.html
@@ -68,16 +68,16 @@
                                 <div id="texto2">
                                     <img src="img/btn2-modal1.png" alt="" class="ico-funcion">
                                     <p class="centered">
-                                        contribución de información de carácter estadístico y demográfico para el
+                                        Contrbuir con información de carácter estadístico y demográfico para el
                                         análisis de las dinámicas y transiciones de la población, así como la
                                         caracterización del perfil de morbilidad y mortalidad que presenta el país.
                                     </p>
                                 </div>
                             </div>
                             <div class="menu">
-                                <span>generalidades</span>
-                                <span>funciones</span>
-                                <span>importante</span>
+                                <span>Generalidades</span>
+                                <span>Funciones</span>
+                                <span>Importante</span>
                                 <ul class="tabs">
                                     <li class="tab">
                                         <a href="#intro" class="pulse animated">
@@ -349,18 +349,18 @@
                         </div>
                         <div class="modal2-1-1-3_P1">
                             <p>
-                                <strong>Estudio:</strong> Son las circunstancias que requieren investigaciones
-                                judiciales para poder determinar si se trata de una muerte natural o violenta. (Este
-                                tipo de muerte solo es certificada por parte del Instituto Nacional de Medicina Legal y
-                                Ciencias Forenses).
+                                <strong>Violenta:</strong> Son esas circunstancias externas que incidentalmente o
+                                accidentalmente producen la muerte; por ejemplo, accidentes de transporte, caídas
+                                accidentales, lesiones autoinfligidas, , ahogamientos, homicidios entre otras.
                             </p>
                             <img src="img/img2-modal-2-1-1-3.png" alt="">
                         </div>
                         <div class="modal2-1-1-3_P2">
                             <p>
-                                <strong>Violenta:</strong> Son esas circunstancias externas que incidentalmente o
-                                accidentalmente producen la muerte; por ejemplo, accidentes de transporte, caídas
-                                accidentales, lesiones autoinfligidas, , ahogamientos, homicidios entre otras.
+                                <strong>Estudio:</strong> Son las circunstancias que requieren investigaciones
+                                judiciales para poder determinar si se trata de una muerte natural o violenta. (Este
+                                tipo de muerte solo es certificada por parte del Instituto Nacional de Medicina Legal y
+                                Ciencias Forenses).
                             </p>
                             <img src="img/img3-modal-2-1-1-3.png" alt="">
                         </div>
@@ -605,9 +605,7 @@
                         <h3 class="etiquetaLarga">Para tener en cuenta</h3>
                         <div class="txtModal-2-2-2">
                             <p id="txtModal2-2-2-P1" class="pulse animated" onclick="hidden1()">
-                                La comprobación física de la muerte de una persona es un requisito sine qua non al que
-                                está obligado un médico u otro personal autorizado para la certificación de una
-                                defunción.
+                                La comprobación física de la muerte de una persona es un requisito <i>sine qua non</i>, al que está obligado un médico u otro personal autorizado para la certificación de una defunción.
                             </p>
                             <p id="txtModal2-2-2-P2" class="hide animated" onclick="hidden2()">
                                 Sumado al examen físico del fallecido, el profesional de salud deberá efectuar el
@@ -1010,7 +1008,7 @@
                                     </ul>
                                     <img id="modal3-2-2-next" src="img/next.png" alt="next"
                                         class="modal3-2-next shake delay-1s slow animated" onclick="modal3_2_2_next()">
-                                    <span class="hide animated"  onclick="changeTab3()">3</span>
+                                    <span class="hide animated" onclick="changeTab3()">3</span>
                                 </div>
                             </div>
                             <div id="tabModal3-3" class="tab-content">
@@ -1050,7 +1048,7 @@
                                     </ul>
                                     <img id="modal3-2-3-next" src="img/next.png" alt="next"
                                         class="modal3-2-next shake delay-1s slow animated" onclick="modal3_2_3_next()">
-                                    <span class="hide animated"  onclick="changeTab4()">4</span>
+                                    <span class="hide animated" onclick="changeTab4()">4</span>
                                 </div>
                             </div>
                             <div id="tabModal3-4" class="tab-content">
