--- a/final.html
+++ b/final.html
@@ -32,13 +32,14 @@
                         <h3>Despedida</h3>
                     </div>
                     <p>
-                        Si tiene dudas técnicas con respecto al funcionamiento de la plataforma escriba al correo: <a href="mailto:soportend@minsalud.gov.co.">soportend@minsalud.gov.co.</a> 
+                        Si tienes dudas técnicas con respecto al funcionamiento de la plataforma escriba al correo: <a href="mailto:soportend@minsalud.gov.co.">soportend@minsalud.gov.co.</a>
                     </p>
                     <p>
-                        En el video que se encuentra dispuesto en este módulo, se efectúa  la certificación correspondiente a un caso de una defunción no fetal que se presenta en una institución de salud.
+                        En el video que se encuentra dispuesto en este módulo, se efectúa la certificación correspondiente a un caso de una defunción no fetal que se presenta en una institución de salud.
                     </p>
                     <p>
-                        Para efectuar una práctica en tiempo real, es necesario contar con un número de certificado y un usuario para ingresar a la plataforma de capacitación, puede solicitarlo al correo <a href="mailto:estadisticasvitales@minsalud.gov.co">estadisticasvitales@minsalud.gov.co</a> donde además puede realizar consultas para aclarar dudas con respecto al proceso de certificación médica de una defunción.
+                        Para efectuar una práctica en tiempo real, es necesario contar con un número de certificado y un
+                        usuario para ingresar a la plataforma de capacitación, puede solicitarlo al correo <a href="mailto:estadisticasvitales@minsalud.gov.co">estadisticasvitales@minsalud.gov.co</a> donde además puedes realizar consultas para aclarar dudas con respecto al proceso de certificación médica de una defunción.
                     </p>
                 </div>
                 <a href="#!" target="_blank" rel="noopener noreferrer" class="btn-audio pulse animated">
