--- a/contents-2-1-1.html
+++ b/contents-2-1-1.html
@@ -355,7 +355,7 @@
             </div>
         </main>
         <footer>
-            <p>2019 - Creditos</p>
+            <p>© Escuela Superior de Administración Pública ESAP • 2019 • Créditos</p>
         </footer>
     </div>
     <script src="js/materialize.min.js"></script>
