--- a/contents.html
+++ b/contents.html
@@ -68,7 +68,7 @@
                                 <div id="texto2">
                                     <img src="img/btn2-modal1.png" alt="" class="ico-funcion">
                                     <p class="centered">
-                                        Contrbuir con información de carácter estadístico y demográfico para el
+                                        Contribuir con información de carácter estadístico y demográfico para el
                                         análisis de las dinámicas y transiciones de la población, así como la
                                         caracterización del perfil de morbilidad y mortalidad que presenta el país.
                                     </p>
@@ -575,13 +575,13 @@
                         </a>
                         <h3 class="etiquetaXL">Procedimiento de certificación de una defunción</h3>
                         <div class="modal2-2-1Txt">
-                            <p id="modal2-2-1P1" class="modal2-2-1P1 pulse fadeIn animated" onclick="hide1()">
+                            <p id="modal2-2-1P1" class="modal2-2-1P1 flipInX animated" onclick="hide1()">
                                 1. Alistamiento de la información a consignar en el certificado.
                             </p>
-                            <p id="modal2-2-1P2" class="modal2-2-1P2 hide fadeIn animated" onclick="hide2()">
+                            <p id="modal2-2-1P2" class="modal2-2-1P2 hide animated" onclick="hide2()">
                                 2. Ingreso y certificación en la plataforma (excepcionalmente en el certificado físico).
                             </p>
-                            <p id="modal2-2-1P3" class="modal2-2-1P3 hide fadeInanimated" onclick="hide3()">
+                            <p id="modal2-2-1P3" class="modal2-2-1P3 hide animated" onclick="hide3()">
                                 3. Entrega del antecedente con las indicaciones precisas a la madre, padre o familiares
                                 del recién nacido para que oportunamente realicen la inscripción del registro civil.
                             </p>
@@ -590,8 +590,8 @@
                             <img src="img/img_1.png" alt="">
                         </div>
                         <button data-target="modal2-2-2"
-                            class="modal-trigger modal-close btn-custom-modal pulse animated btn-modal-2-2-1">
-                            Para tener en cuenta
+                            class="modal-trigger modal-close btn-custom-modal btn-modal-2-2-1">
+                            <span class="pulse animated infinite">Para tener en cuenta</span>
                         </button>
                     </div>
                 </div>
@@ -1096,7 +1096,7 @@
             </div>
         </main>
         <footer>
-            <p>2019 - Creditos</p>
+            <p>© Escuela Superior de Administración Pública ESAP • 2019 • Créditos</p>
         </footer>
     </div>
 
