--- a/final.html
+++ b/final.html
@@ -42,13 +42,13 @@
                         usuario para ingresar a la plataforma de capacitación, puede solicitarlo al correo <a href="mailto:estadisticasvitales@minsalud.gov.co">estadisticasvitales@minsalud.gov.co</a> donde además puedes realizar consultas para aclarar dudas con respecto al proceso de certificación médica de una defunción.
                     </p>
                 </div>
-                <a href="#!" target="_blank" rel="noopener noreferrer" class="btn-audio pulse animated">
+                <!-- <a href="#!" target="_blank" rel="noopener noreferrer" class="btn-audio pulse animated">
                     <img src="img/icon-audio.png" alt="Audio"> AUDIO
-                </a>
+                </a> -->
             </div>
         </main>
         <footer>
-            <p>2019 - Creditos</p>
+            <p>© Escuela Superior de Administración Pública ESAP • 2019 • Créditos</p>
         </footer>
     </div>
 </body>
