--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                         Exitos
                     </strong></p>
                 </div>
-                <a href="#!" target="_blank" rel="noopener noreferrer" class="btn-audio pulse animated">
+                <!-- <a href="#!" target="_blank" rel="noopener noreferrer" class="btn-audio pulse animated">
                     <img src="img/icon-audio.png" alt="Audio"> AUDIO
-                </a>
+                </a> -->
                 <a href="contents.html" target="_self" class="btn-primary btn-home pulse animated">Inicio</a>
             </div>
         </main>
         <footer>
-            <p>2019 - Creditos</p>
+            <p>© Escuela Superior de Administración Pública ESAP • 2019 • Créditos</p>
         </footer>
     </div>
 </body>
